# o_brother

./: .gitignore  LICENSE  Readme.md
gameplay/: Cargo.toml  Makefile.toml  README.md  math_generated.h  render_data_generated.h
gameplay/schema/: input_data.fbs  math.fbs  render_data.fbs
gameplay/src/: allocator.rs  engine.rs  lib.rs  lockstep.rs
gameplay/src/data/: input_data.rs  logic_data.rs  mod.rs  protocol.rs  render_data.rs
gameplay/src/physics/: damper.rs  mod.rs
gameplay/src/schema/: input_data_generated.rs  math_generated.rs  mod.rs  render_data_generated.rs
minigame/: game.js  project.config.json  project.private.config.json
minigame/wasm/: gameplay.wasm
ue5/: .gitignore  o_bro.uproject
ue5/Config/: DefaultEngine.ini  DefaultGame.ini
ue5/Content/Blueprints/: BP_Camera.uasset
ue5/Content/Blueprints/Characters/: BP_Michelle.uasset  BP_Ortiz.uasset
ue5/Content/Input/: IA_Move.uasset  IMC_Player.uasset
ue5/Content/Maps/: ArenaMap.umap  BootMap.umap  MI_Grass.uasset  NewMap_HLOD0_Instancing.uasset
ue5/Content/Mixamo/Michelle/: ABP_Michelle.uasset  BS_Move.uasset  Ch03_Body.uasset  Idle.uasset  Michelle.uasset  Michelle_Skeleton.uasset  Running.uasset  Swiping.uasset  Walking.uasset
ue5/Content/Mixamo/Ortiz/: ABP_Ortiz.uasset  BS_Move.uasset  Ch43_1001_Specular.uasset  Ch43_Body.uasset  Idle.uasset  Ortiz_Skeleton.uasset  Run.uasset  Swiping.uasset  Walking.uasset
ue5/Plugins/oz_lib/: oz_lib.uplugin
ue5/Source/: o_bro_ue5.Target.cs  o_bro_ue5Editor.Target.cs
ue5/Source/o_bro_ue5/: o_bro_ue5.Build.cs  o_bro_ue5.cpp
(+230 files in other folders)
