[package]
name = "gameplay"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wee_alloc = "0.4.5"
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.138", default-features = false, features = ["alloc"] }
hecs = { version = "0.10.5", default-features = false, features = ["macros"] }
hashbrown = { version = "0.15.2" }
libm = "0.2.11"
flatbuffers = { version = "25.2.10", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = 'abort'
lto = true
opt-level = 'z'
codegen-units = 1
